packages/typ/tests/fixtures/diagnostics/0420_modules_opaque_value_annotation_mismatch_02.ml.infer.expected
File "0420_modules_opaque_value_annotation_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0420_modules_opaque_value_annotation_mismatch_02 is not a valid module name.

File "0420_modules_opaque_value_annotation_mismatch_02.ml", line 12, characters 14-27:
12 | let _ : int = Hidden_beta.x
                   ^^^^^^^^^^^^^
Error: The value Hidden_beta.x has type Hidden_beta.t
       but an expression was expected of type int
